# ai-wonderland

./: LICENSE  README.md  main.py  pyproject.toml  vscode-workspace.code-workspace
backend/app/: AGENT.md  Dockerfile  local_main.py  pyproject.toml
backend/app/src/: lambda_main.py  local_main.py
backend/app/src/adapters/: image_model.py  llama.py
backend/app/src/adapters/ai/: image_model.py  similarity_search.py  text_to_text_model.py
backend/app/src/adapters/api/: app.py  fast_api_app.py  get_image_endpoint.py  image.py  local_main.py  start.py  start_game_endpoint.py  start_router.py  talk.py  travel.py
backend/app/src/adapters/cache/: cache_path_provider.py
backend/app/src/adapters/config/: config_loader.py  global_config_provider.py
backend/app/src/adapters/storage/: cache.py  file_store.py  file_store_aws.py  file_store_local.py  session_store.py  text_store.py
backend/app/src/core/: game_starter.py  image_description_generator.py  image_generator.py  image_provider.py  novel_excerpts_retriever.py  novel_excerpts_tool_provider.py  overview_generator.py
backend/app/src/core/shared/: ai_agent.py  image_description_generator.py  image_generator.py  novel_excerpts_retriever.py  novel_excerpts_tool_provider.py
backend/app/src/core/use_cases/start/: overview_generator.py  start_use_case.py
backend/app/src/model/: chat_message.py  game_overview.py  game_session.py  image_generation_result.py  npc.py  talk_result.py  tool.py  travel_result.py
backend/app/tests/: mocks.py  test_endpoints.py  test_image_model.py  test_similarity_search.py  test_start_endpoint.py
src/model/: npc.py  (+2 more)
(+52 files in other folders)
