[project]
name = "ai-wonderland"
version = "0.1.0"
description = "An AI adventure game based on the novel Alice's Adventures in Wonderland by Lewis Carroll"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.1",
    "groq>=1.1.1",
    "openai>=2.28.0",
    "pydantic>=2.12.5",
]
