[project]
name = "ai-wonderland"
version = "0.1.0"
description = "An AI adventure game based on the novel Alice's Adventures in Wonderland by Lewis Carroll"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.1",
    "fastembed>=0.8.0",
    "groq>=1.1.1",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "mangum>=0.17.0",
    "openai>=2.28.0",
    "pydantic>=2.12.5",
    "boto3>=1.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
